# git-conventional-commits

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  grammar.pest
.cargo/: cargo-config.toml  config
.github/workflows/: build.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  git_conventional_commit_messages.md
src/: main.rs
